Added content going home

--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -143,6 +143,7 @@ Alternative queries are possible: ball query and approximate nearest neighbor. T
 
 \subsection{Integer Dilation and Node Reordering}
 
+\cite{MellorCrummey2001} found that reodering nodes via RCM and space filling curves offer similar benefits in terms of reduced TLB misses and better cache coherency. 
 
 \begin{figure}
 \centering
