--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-12 03:25:41 -0500 
+%% Created for Evan Bollig at 2013-08-12 12:08:30 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{MellorCrummey2001,
+	Author = {John Mellor-crummey and David Whalley and Ken Kennedy},
+	Booktitle = {International Journal of Parallel Programming},
+	Date-Added = {2013-08-12 17:08:16 +0000},
+	Date-Modified = {2013-08-12 17:08:30 +0000},
+	Pages = {425--433},
+	Title = {Improving Memory Hierarchy Performance for Irregular Applications Using Data and Computation Reorderings},
+	Year = {2001}}
 
 @mastersthesis{Krog2010,
 	Abstract = {{Snow is a physical phenomenon that is hard to simulate due to the wide range of
