--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-12 12:08:30 -0500 
+%% Created for Evan Bollig at 2013-08-15 15:24:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{TagliasacchiGC,
+	Author = {Andrea Tagliasacchi},
+	Date-Added = {2013-08-15 20:18:12 +0000},
+	Date-Modified = {2013-08-15 20:24:34 +0000},
+	Howpublished = {\url{https://code.google.com/p/kdtree-matlab}},
+	Month = {Jun},
+	Title = {kd-tree matlab},
+	Year = {2012}}
 
 @inproceedings{MellorCrummey2001,
 	Author = {John Mellor-crummey and David Whalley and Ken Kennedy},
