--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -60,8 +60,8 @@ kD Trees partition
 
 \begin{figure}
 \centering
-\includegraphics[width=0.6\textwidth]{rbffd_methods_content/neighbors/kdTree_Start.png}
-\caption{An example $k$-D Tree in 2-Dimensions partitioning nodes with a cyclic splitting rule (i.e., splits occur first in $X$, then $Y$, then $X$, etc.). Splits occur at the median node in each dimension.}
+\includegraphics[width=0.7\textwidth]{rbffd_methods_content/neighbors/kdTree_Start.png}
+\caption{An example $k$-D Tree in 2-Dimensions. Nodes are partitioned with a cyclic dimension splitting rule (i.e., splits occur first in $X$, then $Y$, then $X$, etc.); all splits occur at the median node in each dimension.}
 \label{fig:kdtree_example}
 \end{figure}
 
