--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-15 15:24:34 -0500 
+%% Created for Evan Bollig at 2013-08-17 13:32:23 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Skiena2008,
+	Author = {Steven Skiena},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Date-Added = {2013-08-17 18:32:15 +0000},
+	Date-Modified = {2013-08-17 18:32:20 +0000},
+	Pages = {I-XVI, 1-730},
+	Publisher = {Springer},
+	Title = {The Algorithm Design Manual (2. ed.)},
+	Year = {2008}}
 
 @misc{TagliasacchiGC,
 	Author = {Andrea Tagliasacchi},
